# InfluencerApi

./: .gitignore  Cargo.toml  README.md  docker-compose.yml  dreamsbird_twitch.json  dreamsbird_youtube.json  env.exemple
.docker/apache/: Dockerfile
.docker/config/vhosts/: apache.conf
.docker/php/: Dockerfile  php.ini
.docker/rust/: Dockerfile
src/: main.rs
src/api_error/: main.rs  mod.rs
src/dreamsbird/: controller.rs  main.rs  model.rs  routes.rs
src/paranoi4k/: controller.rs  main.rs  mod.rs  routes.rs
