[package]
name = "paranoi4k-api"
version = "0.1.0"
authors = ["loicngr <pro.nogierloic@gmail.com>"]
edition = "2018"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
dotenv = "0.15"
log = "0.4"
env_logger = "0.7"
actix-web = "2.0"
actix-rt = "1.0"
listenfd = "0.3"
reqwest = "0.10"
futures = "0.3"

[dependencies.async-std]
version = "1.5.0"
default-features = false
features = ["std", "attributes"]